# notime

./: .gitignore  README.md  hello.py  pyproject copy.toml  pyproject.toml
notebooks/: simple_notion_connections.ipynb
notime/: notion_client.py
