[tool.poetry]
name = "notime"
version = "0.1.0"
description = "Simple timesheet integration for Notion"
authors = ["Tim Evans"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
numpy = "^1.23.1"
pandas = "^1.4.3"
requests = "^2.28.1"
SQLAlchemy = "^1.4.39"
sklearn = "^0.0"
loguru = "^0.6.0"
scipy = "^1.9.0"
ipython = "^8.4.0"
alembic = "^1.8.1"
psycopg2 = "^2.9.5"
ipykernel = "^6.25.2"
python-dotenv = "^1.0.0"
notion-client = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
