[project]
name = "notime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "requests>=2.32.3",
    "ruff>=0.6.8",
    "ipykernel>=6.29.5",
    "ipython>=8.12.3",
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.1",
    "notion-client>=2.2.1",
]
